Consumable Material Panel Added

--- a/src/webapp/i18n/i18n.properties
+++ b/src/webapp/i18n/i18n.properties
@@ -1,5 +1,15 @@
+#main page
 mainPageTitle=SAP UI5 Web Application Project
 mainDashboardTitle=Main Dashboard
 geographicFacilityMapTitle=Geographical Facility Map
 activeWorkerListTitle=Active Workers
 calenderTitle=My Calendar
+
+#consumable material table
+consumableMaterialTitle=Consumable Matieral Page
+
+#facility map 
+facilityMapHeaderText= You can display the indepth information about facilities production in entire country.
+facilityListTitle=Facilities
+plantDistributionTitle=Plant Distributions
+facilityMapMainPageTitle=Facility Process Control Page
